--- a/index.css
+++ b/index.css
@@ -1,3 +1,41 @@
-#heading{
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo{
+    width: 120Px;
+}
+.nav-item{
+    padding: 0px 20px;
+}
+.nav-item > ul {
+    display: flex;
+    list-style-type: none;
+    
+}
+.nav-item >ul >li{
+    padding: 10px;
+    margin: 10px;
+
+}
+.res-card{
+    width: 200px;
+    height: 300px;
+    padding: 5px;
+}
+.search{
+    padding: 10px;
+}
+.res-logo{
+    width: 190px;
+    padding: 5px;
+}
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
 }
